--- a/test/Test.Yopass.fsproj
+++ b/test/Test.Yopass.fsproj
@@ -9,5 +9,8 @@
     <Compile Include="Sample.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\src\Yopass\Yopass.fsproj" />
+  </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
