--- a/src/Yopass/Yopass.fsproj
+++ b/src/Yopass/Yopass.fsproj
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <PackageId>Yopass.API</PackageId>
     <TargetFramework>net9.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Crypt.fs" />
     <Compile Include="Yopass.fs" />
+    <None Include="../../README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
