trigger the workflow on push to main branch

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,9 @@
 name: Publish NuGet Package
 
 on:
+  # Runs on pushes targeting the default branch
   push:
+    branches: ["main"]
     tags:
       - "v*"
 
