--- a/Directory.build.props
+++ b/Directory.build.props
@@ -1,13 +1,13 @@
 <Project>
   <PropertyGroup>
-    <Version>0.9.0</Version>
+    <Version>0.9.1</Version>
     <Authors>François-David Collin</Authors>
     <Description>A .NET wrapper for interacting with the Yopass service</Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/fradav/Yopass.API</PackageProjectUrl>
     <RepositoryUrl>https://github.com/fradav/Yopass.API</RepositoryUrl>
     <PackageTags>yopass;secrets;security</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <RepositoryType>git</RepositoryType>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     <LangVersion>latest</LangVersion>
