--- a/src/Yopass/Yopass.fsproj
+++ b/src/Yopass/Yopass.fsproj
@@ -8,7 +8,10 @@
   <ItemGroup>
     <Compile Include="Crypt.fs" />
     <Compile Include="Yopass.fs" />
-    <None Include="../../README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  <ItemGroup>
+      <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+      <None Include="..\..\LICENSE.md" Pack="true" PackagePath="\" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
