--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,12 @@
 name: Publish NuGet Package
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
     tags:
       - "v*"
+    branches:
+      - "main"
+
 
 jobs:
   build:
@@ -36,4 +37,5 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
           dotnet pack -c Release -o ./artifacts
-          dotnet nuget push ./artifacts/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+          dotnet nuget push ./artifacts/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
+
