--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,38 +4,22 @@ on:
   push:
     tags:
       - "v*"
-    branches:
-      - "main"
-
 
 jobs:
-  build:
+  call-build:
+    uses: ./.github/workflows/build.yml
+
+  publish:
+    needs: call-build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
         with:
-          dotnet-version: |
-            9.0.x
-            8.0.x
-
-      - name: Restore tools
-        run: dotnet tool restore
-
-      - name: Restore dependencies
-        run: dotnet restore
-        
-      - name: Build
-        run: dotnet build -c Release --no-restore
-
-      - name: Test
-        run: dotnet test -c Release --no-build --verbosity normal
-        
+          name: build-artifacts
+          path: ./artifacts
+            
       - name: Push to NuGet
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          dotnet pack -c Release -o ./artifacts
           dotnet nuget push ./artifacts/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
-
