--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
+        if: ${{ github.event_name == 'workflow_call' }}
         with:
           name: build-artifacts
           path: ./artifacts
