--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,13 +8,15 @@ on:
 jobs:
   call-build:
     uses: ./.github/workflows/build.yml
+    with:
+      upload-artifacts: true
 
   publish:
     needs: call-build
     runs-on: ubuntu-latest
     steps:
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build-artifacts
           path: ./artifacts
