--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,22 @@ on:
   push:
     branches:
       - "main"
-
+    paths-ignore:
+      - "**/*.md"
+      - "LICENSE"
+  pull_request:
+    branches: [ "main" ]
+    paths-ignore:
+      - "**/*.md"
+      - "LICENSE"
+        
 jobs:
   build:
+    if: ${{ !startsWith(github.event.head_commit.message, '[skip-ci]') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        
+      
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
