--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,35 @@ jobs:
       - name: Pack
         run: dotnet pack -c Release -o ./artifacts --no-build --no-restore
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: ./artifacts
-          retention-days: 1
+      - name: Extract version from Directory.Build.props
+        id: get-version
+        shell: pwsh
+        run: |
+          [xml]$props = Get-Content 'Directory.Build.props'
+          $version = $props.Project.PropertyGroup.Version
+          echo "version=$version" >> $env:GITHUB_OUTPUT
+
+      - name: Check if tag exists
+        id: check-tag
+        run: |
+          git fetch --tags
+          if (git rev-parse "v${{ steps.get-version.outputs.version }}" 2>$null) {
+          echo "Tag already exists"
+          echo "tag_exists=true" >> $GITHUB_OUTPUT
+          } else {
+          echo "Tag does not exist"
+          echo "tag_exists=false" >> $GITHUB_OUTPUT
+          }
+        shell: pwsh
+
+      - name: Create and push tag
+        if: steps.check-tag.outputs.tag_exists == 'false' && github.ref == 'refs/heads/main'
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git tag -a "v${{ steps.get-version.outputs.version }}" -m "Release v${{ steps.get-version.outputs.version }}"
+          git push origin "v${{ steps.get-version.outputs.version }}"
+
+      - name: Push NuGet package
+        if: steps.check-tag.outputs.tag_exists == 'false' && github.ref == 'refs/heads/main'
+        run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
