--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ on:
       - "**/*.md"
       - "LICENSE"
         
+permissions:
+  contents: write
+  
 jobs:
   build:
     if: ${{ !startsWith(github.event.head_commit.message, '[skip-ci]') }}
